# elrond-multisig-enhanced

./: .gitignore  Cargo.toml  README.md
mandos/: call_other_shard-2.scen.json  deployAdder_then_call.scen.json  deployFactorial.scen.json  deployOtherMultisig.scen.json  deploy_duplicate_bm.scen.json  remove_everyone.scen.json  upgrade_from_source.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: action.rs  multisig_perform.rs  multisig_propose.rs  multisig_state.rs
tests/: multisig_mandos_rs_test.rs
wasm/: Cargo.toml
wasm-view/: Cargo.toml
wasm-view/src/: lib.rs
wasm/src/: lib.rs
