[package]
name = "multisig-enhanced"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/multisig.rs"

[dependencies.elrond-wasm]
version = "0.27.2"

[dev-dependencies.elrond-wasm-debug]
version = "0.27.2"

[dev-dependencies.adder]

[dev-dependencies.factorial]
