[package]
name = "multisig-enhanced"
version = "0.0.1"
authors = [ "Gaupa Labs",]
edition = "2018"
publish = false

[lib]
path = "src/multisig.rs"

[dependencies.elrond-wasm]
version = "0.27.2"

[dev-dependencies.elrond-wasm-debug]
version = "0.27.2"

[dev-dependencies.adder]

[dev-dependencies.factorial]
